--- a/themes/beautifulhugo/static/css/fontello-config.json
+++ b/themes/beautifulhugo/static/css/fontello-config.json
@@ -103,6 +103,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "9f7e588c66cfd6891f6f507cf6f6596b",
+      "css": "phone",
+      "code": 59397,
+      "src": "fontawesome"
+    },
+    {
       "uid": "5ccf8ab9dd233eae97e9d0e7816d0da6",
       "css": "hackaday",
       "code": 59394,
