--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,3 +56,4 @@ jobs:
         git add .
         git commit -m "New build"
         git remote set-url origin https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git
+        git push origin master
