--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Check out code into the Go module directory
       env:
         advice.detachedHead: false
-      uses: actions/checkout@v1
+      uses: actions/checkout@master
 
     - name: Get dependencies
       run: |
@@ -47,7 +47,7 @@ jobs:
     - name: Commit Changes
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GITHUB_EMAIL: ${{ secrets.EMAIL }}
+        GITHUB_EMAIL: ${GITHUB_ACTOR}@users.noreply.github.com
         GITHUB_ACTOR: ${{ github.actor }}
         GITHUB_REPOSITORY: ${{ github.repository }}
       run: |
