--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build website using build/build.go
 on:
   schedule:
-    - cron:  '0 0 * * 0'
+    - cron:  '0 0 1 * *'
   push:
     paths:
     - '*'        # Run workflow for all file paths
