--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,15 +52,10 @@ jobs:
         go run .
 
     - name: Commit Changes
-      env:
-        GITHUB_TOKEN: ${{ secrets.LDRRP_BLOG_ACCESS_TOKEN }}
-        GITHUB_EMAIL: ${GITHUB_ACTOR}@users.noreply.github.com
-        GITHUB_ACTOR: ${{ github.actor }}
-        GITHUB_REPOSITORY: ${{ github.repository }}
       run: |
-        git config --global user.email "$GITHUB_EMAIL"
+        git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
         git config --global user.name "Github Actions"
         git add .
         git commit -m "New build"
-        git remote set-url origin https://ldrrp:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git
+        git remote set-url origin https://ldrrp:${{ secrets.PERSONAL }}@github.com/${{ github.repository }}.git
         git push origin master
