--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,11 @@ on:
   push:
     paths:
     - '*'        # Run workflow for all file paths
+    - '*/*'
+    - '*/*/*'
+    - '*/*/*/*'
+    - '*/*/*/*/*'
+    - '*/*/*/*/*/*' #idk why it was not running for other edits, but lets give this a go
     - '!/docs/*' # Don't run workflow when files are only in the /docs directory
     branches:
       - master
