--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,7 @@ metaDataFormat = "yaml"
 pygmentsUseClasses = true
 pygmentCodeFences = true
 disqusShortname = "sclblog-1"
+googleAds = "ca-pub-6882852717412296"
 googleAnalytics = "UA-78226868-1"
 
 [Params]
