lock hugo version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,11 +32,19 @@ jobs:
         advice.detachedHead: false
       uses: actions/checkout@master
 
-    - name: Install Hugo
+    # - name: Install Hugo
+    #   run: |
+    #     curl -s https://api.github.com/repos/gohugoio/hugo/releases/latest | grep "browser_download_url.*hugo_[^extended].*_linux-amd64\.deb" | cut -d ":" -f 2,3 | tr -d \" | wget -qi -
+    #     package="$(find . -name "*_linux-amd64.deb")"
+    #     sudo dpkg -i $package
+    #     which hugo
+    #     hugo version
+    #     rm -rf *.deb
+
+    - name: Install Hugo 0.123.6
       run: |
-        curl -s https://api.github.com/repos/gohugoio/hugo/releases/latest | grep "browser_download_url.*hugo_[^extended].*_linux-amd64\.deb" | cut -d ":" -f 2,3 | tr -d \" | wget -qi -
-        package="$(find . -name "*_linux-amd64.deb")"
-        sudo dpkg -i $package
+        curl https://github.com/gohugoio/hugo/releases/download/v0.123.6/hugo_0.123.6_linux-amd64.deb -LO
+        sudo dpkg -i hugo_0.123.6_linux-amd64.deb
         which hugo
         hugo version
         rm -rf *.deb
